fix : settings z-index

--- a/frontend/src/component/settings/style.css
+++ b/frontend/src/component/settings/style.css
@@ -1,4 +1,6 @@
 .settings {
+    z-index: 1;
+
     .gear {
 
         position: fixed;
